--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -20,9 +20,7 @@ repos:
     rev: v1.16.3
     hooks:
       - id: zizmor
-        args:
-          - "--no-progress"
-          - "--fix"
+        args: ["--no-progress", "--fix"]
 
   - repo: https://github.com/shellcheck-py/shellcheck-py
     rev: v0.11.0.1
